welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:10: error: not found: value dogHous
	dogHous();
        ^